# wavyfm-status-page

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html  run-with-https.sh
.github/workflow/: build-and-push.yml
.github/workflows/: build-and-push.yml
src/: main.rs
